# wellside

./: .gitignore  Taskfile.yaml  mise.toml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
Docker/: docker-compose.yml
app/: main.py
docs/: basic.md  details.md  requirement.md
